unit test fix